# mcp-knowledge-server

./: .gitignore  .pre-commit-config.yaml  fastagent.config.yaml  pyproject.toml
.github/workflows/: build-docker.yml  terraform.yml
backend/: .gitignore  Dockerfile  cloudbuild.yaml  dauthz_model.conf  entrypoint.sh
backend/backend/: urls.py
backend/backend/deployed_settings/: database_conf.py  gcp_h2c_conf.py
backend/backend/settings/: __init__.py  common.py  common_conf.py  content_access_control_conf.py  database.py  database_conf.py  logging_conf.py  logging_config.py  rest_framework_conf.py  rest_framework_config.py  static_files.py  static_files_conf.py
backend/content_access_control/: admin.py  admin_permission.py  apps.py  middleware.py  model_conversion.py  models.py  permissions.py  policy_mixins.py
backend/content_access_control/migrations/: 0001_initial.py
backend/file_processing/: README.md  admin.py  apps.py  google_auth.py  hypo_query_generation.py  models.py  section_digest_formatters.py  urls.py  utils.py  views.py
backend/file_processing/migrations/: 0001_enable_pgvector.py  0002_initial.py  0003_alter_knowledgesource_file.py  0004_queryvector_delete_chunkvector.py  0005_alter_queryvector_file.py
backend/file_processing/tests/: test_eventarc_view.py
backend/file_processing/views/: eventarc.py  retrieve_chunks.py  (+1 more)
backend/rag_responses/: admin.py  apps.py  models.py  urls.py  views.py
infrastructure/: backend.tf  main.tf  providers.tf  setup_infra.sh  variables.tf
infrastructure/environments/: deployed.tfvars
mcp/: knowledge.py
(+22 files in other folders)
