[project]
name = "mcp-knowledge-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "casbin-django-orm-adapter>=1.7.0",
    "content-extraction>=0.3.1",
    "django>=5.2.5",
    "django-authorization>=1.4.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "google-cloud-storage>=3.3.0",
    "hypercorn>=0.17.3",
    "uuid-utils>=0.11.0",
]

[dependency-groups]
docker-image = [
    "psycopg2-binary>=2.9.10",
]
